--- a/Latex/commandsFile.tex
+++ b/Latex/commandsFile.tex
@@ -1,12 +1,12 @@
-\documentclass [11pt,twoside]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
+% \documentclass [11pt,twoside]{article}
+% \usepackage[utf8]{inputenc}
+% \usepackage[T1]{fontenc}
 
 %Page margins, header and footer positions
 \usepackage{geometry}
  \geometry{
  a4paper,
- total={210mm,297mm},
+ % total={210mm,297mm},
  left=25mm,
  right=25mm,
  top=30mm,
