--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -1,4 +1,8 @@
+\documentclass [11pt,twoside]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \input{commandsFile}
+
 
 \begin{document}
 
@@ -72,7 +76,7 @@
 \clearpage
 {\color{Blue}{\section{Overall Description}}}
 \label{sect:overview}
-\input{Files/overview}
+\input{Files/overview} 
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
