Latex Template Fix for portability between Overleaf and local installation of MikTex

--- a/Latex/commandsFile.tex
+++ b/Latex/commandsFile.tex
@@ -1,6 +1,6 @@
-% \documentclass [11pt,twoside]{article}
-% \usepackage[utf8]{inputenc}
-% \usepackage[T1]{fontenc}
+\documentclass [11pt,twoside]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 
 %Page margins, header and footer positions
 \usepackage{geometry}
@@ -45,7 +45,7 @@
 \renewcommand{\ttdefault}{lmtt}
 
 %tables
-\usepackage{tabu}
+%\usepackage{tabu}
 \usepackage{tabularx}
 \usepackage{ltablex}
 \usepackage{longtable}
