--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -1,6 +1,6 @@
-\documentclass [11pt,twoside]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
+%documentclass [11pt,twoside]{article}
+% \usepackage[utf8]{inputenc}
+% \usepackage[T1]{fontenc}
 \input{commandsFile}
 
 
@@ -15,10 +15,9 @@
 
 {\begin{table}[t!]
 \centering
-\begin{tabu} to \textwidth { X[1.3,r,p] X[1.7,l,p] }
-\textcolor{Blue}
-{\textbf{\small{Travlendar+ project YOUR NAMES}}} & \includegraphics[scale=0.5]{Images/PolimiLogo}
-\end{tabu}
+\begin{tabularx}{\textwidth}{@{}X X@{}}
+        \textcolor{Blue}{\textbf{\small{Travlendar+ project YOUR NAMES}}} & \includegraphics[scale=0.5]{Images/PolimiLogo}
+        \end{tabularx}
 \end{table}}~\\ [7cm]
 
 %TITLE 
@@ -36,19 +35,20 @@
 %Define deliverable specific info
 %Replace cell contents where needed
 \begin{table}[h!]
-\begin{tabu} to \textwidth { X[0.3,r,p] X[0.7,l,p] }
-\hline
+        \centering
+        \begin{tabular}{@{} l p{0.75\textwidth} @{}}
+            \hline
+            \textbf{Deliverable:} & RASD \\ 
+            \textbf{Title:} & Requirement Analysis and Verification Document \\
+            \textbf{Authors:} & YOUR NAMES \\
+            \textbf{Version:} & 1.0 \\ 
+            \textbf{Date:} & 31-January-2016 \\
+            \textbf{Download page:} & LINK TO YOUR REPOSITORY \\
+            \textbf{Copyright:} & Copyright © 2017, YOUR NAMES – All rights reserved \\
+            \hline
+        \end{tabular}
+    \end{table}
 
-\textbf{Deliverable:} & RASD\\
-\textbf{Title:} & Requirement Analysis and Verification Document \\
-\textbf{Authors:} & YOUR NAMES \\
-\textbf{Version:} & 1.0 \\ 
-\textbf{Date:} & 31-January-2016 \\
-\textbf{Download page:} & LINK TO YOUR REPOSITORY \\
-\textbf{Copyright:} & Copyright © 2017, YOUR NAMES – All rights reserved \\
-\hline
-\end{tabu}
-\end{table}
 
 
 
