Updates from Overleaf

--- a/Latex/Files/requirements.tex
+++ b/Latex/Files/requirements.tex
@@ -10,6 +10,8 @@ Use Case Diagrams, detailed Use Case Descriptions, Sequence Diagrams and Require
 \subsubsection{Sequence Diagrams}
 \subsubsection{Requirements Mapping}
 \subsection{Performance Requirements}
+ Given the system's noncritical nature, stringent performance criteria are unnecessary. However, to ensure an optimal User experience, the system should:
+
 \subsection{Design Constraints}
 \subsubsection{Standards Compliance}
 \subsubsection{Hardware limitations}
