--- a/Latex/Files/introduction.tex
+++ b/Latex/Files/introduction.tex
@@ -1,48 +1,122 @@
 \subsection{Purpose}
 The purpose of the Student\&Company (S\&C) Platform is to create a system that allows Students to find Internships to enhance their education and improve their curriculum, while allowing Companies to find suitable candidates for their internship programs. All of this is done in a simple and efficient way by providing a series of tools to help both parties in the process.\\
 S\&C will support the entire lifecycle of the Internship process for both Students and Companies: from the initial matchmaking that can be done automatically by the system through a proprietary Recommendation Process, or obtained by a Student with a Spontaneous Application to a specific internship offer, to the final selection process done through structured interviews created and submitted by Companies directly on the platform.\\% 
-In the meantime, Student\&Company will also provide a series of Suggestions to improve CVs published by Students and internship offers published by Companies. The platform will also allow the Universities of students who are actually doing an internship to monitor the progress of such activities and handle any Complaints if necessary.
+In the meantime, Student\&Company will also provide a series of Suggestions to improve CVs published by Students and internship offers published by Companies. The platform will also allow the Universities of Students who are actually doing an internship to monitor the progress of such activities and handle any Complaints if necessary, even by terminating the internship if no other solution to the problem can be found.
 \subsubsection{Goals}
+\begin{enumerate}[label={\color{titleColor}[G\arabic*]}]
+\item Companies would like to advertise the internship they offer 
+\item Students would like to autonomously candidate for available internships 
+ \item Students would like to be matched with internships they might be interested in 
+ \item Companies would like to perform interviews with matched students 
+ \item Students and Companies would like to complain, communicate problems, provide information about an ongoing internship 
+ \item Students and Companies would like to be provided with suggestions about how to improve their submission 
+ \item Universities would like to handle complaints about ongoing internships 
+\end{enumerate}
 
 
 \subsection{Scope}
+This section defines the scope of the S\&C platform, highlighting the key features and functionalities that enable interactions among students, companies, and universities.
+The main features to provide in order to satisfy all the goals are the following:
+\begin{itemize}
+\item {\color{titleColor}Advertise Internship:}\\ Companies can publish internships offers that:
+    \begin{itemize}
+        \item Students can spontaneously apply to;
+        \item Recommendation process consider while looking for matches.
+    \end{itemize}
+\item {\color{titleColor}Insert CV:}\\ Students can provide the platform with their CV that Recommendation process will consider while looking for matches.
+\item {\color{titleColor}Spontaneous Application:}\\ Students can autonomously apply for an available internship offer.
+%\item {\color{titleColor}Spontaneous Application Acceptance:}\\ Companies can accept a spontaneous application sent by a Student.
+\item {\color{titleColor}Recommendation Process:}\\ The platform automatically finds matches between available CV and Internships. At the end of the process, provides Students and Companies with a match they can accept or refuse.
+%\item {\color{titleColor}Matches and Application Monitoring:}\\
+%Students and Companies can see and interact with spontaneous applications and  matches concerning them.
+\item {\color{titleColor}Interview Process:}\\
+    Companies can interview both Student whose Spontaneous Application has been accepted, and Students that accepted a match found by Recommendation Process the company has accepted too, by providing them with Interview. The outcome of the Interview finalizes the selection process that can lead to a confirmed internship experience.  
+{%\item {\color{titleColor}Match Acceptance:}\\ Students and Companies can accept a match proposed by the Recommendation Process.
+%\item {\color{titleColor}Interview Management:}\\
+    %Companies can create template interviews and start the Interview process with:
+    %\begin{itemize} 
+    %\item Students whose match with one of their Internship has been accepted by both the parties;
+    %\item Students whose spontaneous application with one of their Internship has been accepted by both the parties.
+    %\end{itemize}
+    %Companies can monitor the state of an interview:
+    %\begin{itemize}
+        %\item sent: means the Interview process concerning that student has started;
+        %\item on-going: means that the student is answering the interview he/she received;
+        %\item to-be-evaluated: means that the student has answered all the sections of the interview and the interview needs to be evaluated by the Company;
+        %\item negatively-evaluated: means that the interview has been negatively evaluated by the Company and the interview will not lead to a confirmed internship;
+        %\item positively-evaluated: means that the interview has been positively evaluated by the Company, and it is waiting to be accepted or refused by the Student;
+        %\item refused: means that the Student refused the internship offer and the interview will not lead to a confirmed internship;
+        %\item accepted: means that the Student accepted the internship offer and the interview will lead to a confirmed internship. It also implies that all the other evaluated/to-be-evaluated/on-going/sent interviews states concerning that student will be imposed to refused.
+    %\end{itemize}
+    %Companies can delete previously created template interviews only if all the interviews concerning that template are in a refused/accepted/negatively-evaluated state.
+}
+\item {\color{titleColor}Internship Handling:}\\
+    Students and Companies can complain, communicate problems, provide information about a confirmed internship.\\
+    University can monitor a confirmed Internship and handle complaints, communicated problems and provided information.
+    Handling a complaint, the University can decide to interrupt the Internship.
+\item {\color{titleColor}Suggestion Mechanism:}\\
+    The platform provide suggestion to both Students and Companies about the manner they respectively provide it with their CV and Internships. The suggestion achievement is to allow Students and Companies to perform better in Recommendation Process.
+\end{itemize}
 
 \subsubsection{World Phenomena}
-
 \subsubsection{Shared Phenomena}
-
-
 \subsection{Definitions, Acronyms, Abbreviations}  
 This section offers explanations of terminology to elucidate the terms, acronyms and abbreviations used throughout the document, facilitating easy comprehension and reference for the readers.
 \subsubsection{Definition}
 \begin{itemize}
-    \item \textbf{University}\label{def:university}: An institution that is registered on the S\&C platform.
-    \item \textbf{Company}\label{def:compnay}: A company that is registered on the S\&C platform.
-    \item \textbf{Student}\label{def:student}: A person who is currently enrolled in a University and is registered on the S\&C platform.
-    \item \textbf{User}\label{def:user}: Any registered entity on the S\&C platform.
-    \item \textbf{Internship}\label{def:internship}: The offer of a position provided by a company to one or more students. The position for a single student is temporary, but the offer remains active until it is removed from the platform.
-    \item \textbf{Recommendation Process}\label{def:recommendationProcess}: The process of matching a Student with an Internship offered by a Company based on the Student's CV and the Internship's requirements made by the S\&C platform.
-    \item \textbf{Recommendation/Match}\label{def:match}: The result of the Recommendation Process. It is the match between a Student and an Internship.
-    \item \textbf{Spontaneous Application}\label{def:spontaneousApplication}: The process of a Student manually applying for an Internship that was not matched through the Recommendation Process.
-    \item \textbf{Template Interview}\label{def:templateInterview}: A collection of open-ended questions, quizzes, and calls that a Company can create. Each time a Company wants to interview a Student, they can select a Template Interview, or create a new one, and assign it to the Student.
-    \item \textbf{Interview}\label{def:Interview}: The process of evaluating a Student's application for an Internship, done through a Template Interview.
-    \item \textbf{Feedback}\label{def:Feedback}: Information provided by Students and Companies to the S\&C platform to improve the Recommendation Process.
-    \item \textbf{Suggestion}\label{def:suggestion}: Information provided by the S\&C platform to Students and Companies to improve their CVs and Internship descriptions.
-    \item \textbf{Complaint}\label{def:complaint}: A report of a problem or issue that a Student or Company has with an ongoing Internship. It can be published on the platform and handled by the University.
+    \item \textcolor{titleColor}{\textbf{University}\label{def:university}}: An institution that is registered on the S\&C platform.
+    \item \textcolor{titleColor}{\textbf{Company}\label{def:company}}: A company that is registered on the S\&C platform.
+    \item \textcolor{titleColor}{\textbf{Student}\label{def:student}}: A person who is currently enrolled in a University and is registered on the S\&C platform.
+    \item \textcolor{titleColor}{\textbf{User}\label{def:user}}: Any registered entity on the S\&C platform.
+    \item \textcolor{titleColor}{\textbf{Internship}\label{def:internship}}: The offer of a position provided by a company to one or more students. The position for a single student is temporary, but the offer remains active until it is removed from the platform.
+    \item \textcolor{titleColor}{\textbf{Recommendation Process}}\label{def:recommendationProcess}: The process of matching a Student with an Internship offered by a Company based on the Student's CV and the Internship's requirements made by the S\&C platform.
+    \item \textcolor{titleColor}{\textbf{Recommendation/Match}\label{def:match}}: The result of the Recommendation Process. It is the match between a Student and an Internship.
+    \item \textcolor{titleColor}{\textbf{Spontaneous Application}\label{def:spontaneousApplication}}: The process of a Student manually applying for an Internship that was not matched through the Recommendation Process.
+    \item \textcolor{titleColor}{\textbf{Template Interview}\label{def:templateInterview}}: A collection of open-ended questions, quizzes, and calls that a Company can create. Each time a Company wants to interview a Student, they can select a Template Interview, or create a new one, and assign it to the Student.
+    \item \textcolor{titleColor}{\textbf{Interview}\label{def:Interview}}: The process of evaluating a Student's application for an Internship done through a Template Interview.
+    \item \textcolor{titleColor}{\textbf{Feedback}\label{def:Feedback}}: Information provided by Students and Companies to the S\&C platform to improve the Recommendation Process.
+    \item \textcolor{titleColor}{\textbf{Suggestion}\label{def:suggestion}}: Information provided by the S\&C platform to Students and Companies to improve their CVs and Internship descriptions.
+    \item \textcolor{titleColor}{\textbf{Complaint}\label{def:complaint}}: A report of a problem or issue that a Student or Company has with an ongoing Internship. It can be published on the platform and handled by the University.
+    \item \textcolor{titleColor}{\textbf{Confirmed Match}\label{def:confirmedMatch}}: A match that has been accepted by both a Student and a Company.
+    \item \textcolor{titleColor}{\textbf{Rejected Match}\label{def:rejectedMatch}}: A match that has been refused by either a Student or a Company.
+    \item \textcolor{titleColor}{\textbf{Pending Match}\label{def:pendingMatch}}: A match that has been accepted only by a Student or a Company, waiting for a response from the other party.
+    \item \textcolor{titleColor}{\textbf{Unaccepted Match}\label{def:unacceptedMatch}}: A match that has been refused by either a Student or a Company
+    
+    
 \end{itemize}
 
 \subsubsection{Acronyms}
+\begin{table}[h]
+    \centering
+\begin{tabular}{|c|c|}
+        \hline
+        \textbf{Acronyms} & \textbf{Definition} \\ \hline
+        RASD & Requirements Analysis \& Specification Document\\ \hline
+        CV & Curriculum vitae\\ \hline
+    \end{tabular}
+    \caption{Acronyms and Definitions}
+    \label{tab:acronyms}
+\end{table}
 
 \subsubsection{Abbreviations}
-
+\begin{table}[h]
+    \centering
+\begin{tabular}{|c|c|}
+        \hline
+        \textbf{Acronyms} & \textbf{Definition} \\ \hline
+        S\&C & Students\&Companies \\ \hline
+    \end{tabular}
+    \caption{Abbreviations and Definitions}
+    \label{tab:abbreviations}
+\end{table}
 
 \subsection{Revision History}
 \begin{table}[h]
     \centering
-    \begin{tabular}{|l|c|l|}
+    \begin{tabular}{|c|c|c|}
         \hline
-        Revised on & Version & Description\\ \hline
-        ?-?-2024 & 1.0     & Initial Release of the document \\ \hline
+        \textbf{Revised on} & \textbf{Version} & \textbf{Description}\\ \hline
+        ?-?-2024 & 1.0     & Initial release of the document \\ \hline
     \end{tabular}
     \caption{Document Revision History}
     \label{tab:revision_history_table}
